--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "pokedex-promise-v2": "^3.3.2"
   }
 }
