--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "pokedex_api",
   "version": "1.0.0",
   "description": "Api for pokedex flutter app",
-  "main": "server.js",
+  "main": "./src/server.ts",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon ./src/server.ts",
+    "start:compiled": "node ./dist/server.js",
+    "build": "tsc --project tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,11 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "pokedex-promise-v2": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.13",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
