--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
+    "@types/node": "^16.9.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
